# RabbitMQ

./: Cargo.toml  Makefile  README.md  code.todo  configuration.json
client/: Cargo.toml
client/src/: main.rs
src/: client.rs
tcp/: Cargo.toml
tcp/src/: main.rs
yml/: client_cli.yaml  tcp.yaml  temp.json
