[package]
name = "rabbit_mq"
version = "0.1.0"
authors = ["Tamir Cohen <Tamircohen2468@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
amiquip = { version = "0.4", default-features = false }