[package]
name = "rabbit_mq_rust"
version = "0.1.0"
authors = ["Tamir Cohen <Tamircohen2468@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.0"
log = "0.4.11"
clap = "2.33.3"
env_logger = "0.8.2"